# Chess

./: .gitignore  CMakeLists.txt  Chess.sln  Chess.vcxproj  Chess.vcxproj.filters  LICENSE.txt  README.md
include/: Bishop.h  ChessGame.h  King.h  Knight.h  Macros.h  MainLoop.h  Pawn.h  Piece.h  Queen.h  Rook.h  SDL_Handler.h
src/: Bishop.cpp  ChessGame.cpp  EntryPoint.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  SDL_Handler.cpp
